--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="colorWhite">#ffffff</color>
-    <color name="colorBlack">#000000</color>
-    <color name="colorBlue">#2F41E3</color>
+    <color name="colorPrimary">#9B9A9A</color>
+    <color name="colorPrimaryDark">#424242</color>
+    <color name="colorAccent">#448AFF</color>
+
+    <!-- typography -->
+    <color name="text_black">#424242</color>
+    <color name="text_gray">#9B9A9A</color>
+
 
 </resources>
