--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".HomeFragment"
-    android:layout_gravity="center">
+    android:scrollbars="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        android:orientation="vertical"
+        android:background="@drawable/corner_radius_header_home">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/baloo_tammudu"
+            android:text="@string/alushelp"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/heading_3" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_san"
+            android:text="@string/contoh_hari_tanggal"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/body_2"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Home Fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="@dimen/margin_side"
+        android:layout_marginRight="@dimen/margin_side"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/noto_san"
+        android:text="@string/beranda_header_1"
+        android:textColor="@color/textBlack"
+        android:textSize="@dimen/subtitle_1"
+        android:textStyle="bold"/>
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_side"
+        android:layout_marginRight="@dimen/margin_side">
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view1"
+            android:layout_gravity="center"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="@dimen/margin_side"
+            card_view:cardCornerRadius="5dp"
+            android:layout_alignParentLeft="true"
+            android:clickable="true"
+            >
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="16dp"
+                android:background="@drawable/shadow_cardview_fitur">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/setrika"
+                    android:gravity="center|bottom"
+                    android:paddingBottom="5dp"/>
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view2"
+            android:layout_gravity="center"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerHorizontal="true"
+            card_view:cardCornerRadius="5dp"
+            android:clickable="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/cuci"
+                android:gravity="center|bottom"
+                android:paddingBottom="5dp"/>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view3"
+            android:layout_gravity="center"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginRight="@dimen/margin_side"
+            card_view:cardCornerRadius="5dp"
+            android:layout_alignParentRight="true"
+            android:clickable="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/kustom"
+                android:gravity="center|bottom"
+                android:paddingBottom="5dp"/>
+
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="@dimen/margin_side"
+        android:layout_marginRight="@dimen/margin_side"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/noto_san"
+        android:text="@string/beranda_header_2"
+        android:textColor="@color/textBlack"
+        android:textSize="@dimen/subtitle_1"
+        android:textStyle="bold"/>
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cv_promo"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="@dimen/margin_side"
+        card_view:cardCornerRadius="5dp"
+        android:clickable="true">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/rabu_ceria"
+                android:gravity="center"
+                android:paddingBottom="5dp"/>
+    </android.support.v7.widget.CardView>
+
+
+</LinearLayout>
