--- a/app/src/main/res/menu/bottom_nav_main.xml
+++ b/app/src/main/res/menu/bottom_nav_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/action_pesanan"
         android:icon="@drawable/ic_assignment_black_24dp"
         android:title="@string/pesanan"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_lainnya"
         android:icon="@drawable/ic_more_vert_black_24dp"
         android:title="@string/lainnya"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 </menu>
